[구성] 올바른 컴포넌트 마크업
- Switch
- role=switch
- tabindex=0

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <body>
 
-    <!-- Switch 컴포넌트 마크업 (올바른 컴포넌트 설계) -->
+    <!-- Switch 사용자 정의(custom) 컴포넌트 마크업 (올바른 컴포넌트 설계) -->
+    <div role="switch" tabindex="0">스위치</button>
 
   </body>
 
