[구현] Switch 컴포넌트
- 테마 스위치 데모 추가

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="description" content="UI 컴포넌트 디자인(설계) 분석 후, 웹 개발 코드로 핸드오프" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <script type="module" src="./src/main.js"></script>
   </head>
 
   <body>
 
-    <!-- Switch 사용자 정의(custom) 컴포넌트 마크업 (올바른 컴포넌트 설계) -->
-    <div role="switch" tabindex="0">스위치</button>
+    <div class="demo">
+      <div class="switch" data-label="테마(Theme)"></div>
+    </div>
 
   </body>
 
