[구현] Chip 컴포넌트
- 여러 칩중 단 하나만 선택되도록 구성

--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
   <body>
 
     <div class="demo">
-      <div class="switch" data-label="테마(Theme)"></div>
+      <section role="group">
+        <h1 class="sr-only">컴포넌트 디자인</h1>
+        <ul class="switch-list">
+          <li><div class="switch" data-label="테마(Theme)"></div></li>
+          <li><div class="switch" data-label="글자 확대"></div></li>
+        </ul>
+        <p class="font-size-control">스위치를 누르면 글자 크기가 변경됩니다.</p>
+      </section>
+      <nav class="chip-list">
+        <button type="button" class="chip" aria-pressed="true">공개 예정</button>
+        <button type="button" class="chip">모두의 인기 콘텐츠</button>
+        <button type="button" class="chip">TOP 5</button>
+      </nav>
     </div>
+
+    
 
   </body>
 
