[구성] 멀티 페이지 앱
- 멀티 페이지 앱 설정
- 페이지 별 스크립트 청크 코드 분리 설정

--- a/pages/tailwindcss.html
+++ b/pages/tailwindcss.html
@@ -3,12 +3,12 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>UI 디자인 → 개발 핸드오프</title>
-    <meta name="description" content="UI 컴포넌트 디자인(설계) 분석 후, 웹 개발 코드로 핸드오프" />
+    <title>[Tailwind CSS] UI 디자인 → 개발 핸드오프</title>
+    <meta name="description" content="UI 컴포넌트 디자인(설계) 분석 후, Tailwind CSS 프레임워크를 사용해 웹 개발 코드로 핸드오프" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <script type="module" src="/src/scripts/main.js"></script>
-    <script type="module" src="/src/scripts/pages/index.js"></script>
+    <script type="module" src="/src/scripts/pages/tailwindcss.js"></script>
     <base href="%BASE_URL%" />
   </head>
 
@@ -28,7 +28,7 @@
         <button type="button" class="chip">모두의 인기 콘텐츠</button>
         <button type="button" class="chip">TOP 5</button>
       </nav>
-      <a href="pages/tailwindcss.html">Tailwind CSS 버전</a>
+      <a href="index.html"><abbr title="Cascading Style Sheets">CSS</abbr> 버전</a>
     </div>
 
   </body>
