[구현] 컴포넌트, 디자인 핸드오프 페이지 내비게이션

--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 
   <body>
 
+    <header class="flex flex-col items-center gap-3 pt-5">
+      <a
+        href="pages/tailwindcss.html"
+        class="grid place-content-center text-xs size-7 rounded-full hover:bg-primary text-achromatic-700 hover:text-white duration-200"
+        aria-label="페이지 디자인 핸드오프"
+        title="페이지 디자인 핸드오프 페이지로 이동"
+      >→</a>
+      <h1 class="text-lg font-normal text-primary">컴포넌트 디자인 핸드오프</h1>
+    </header>
+
     <div class="demo">
-      <section role="group">
-        <h1 class="sr-only">컴포넌트 디자인</h1>
+      <section role="group" aria-label="컴포넌트 디자인 데모">
         <ul class="switch-list">
           <li><div class="switch" data-label="테마(Theme)"></div></li>
           <li><div class="switch" data-label="글자 확대"></div></li>
@@ -28,7 +37,6 @@
         <button type="button" class="chip">모두의 인기 콘텐츠</button>
         <button type="button" class="chip">TOP 5</button>
       </nav>
-      <a href="pages/tailwindcss.html">Tailwind CSS 버전</a>
     </div>
 
   </body>
