--- a/pages/tailwindcss.html
+++ b/pages/tailwindcss.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <script type="module" src="/src/scripts/main.js" ></script>
-    <script type="module" src="/src/scripts/pages/tailwindcss.js" ></script>
+    <script type="module" src="/src/scripts/pages/tailwindcss.js"></script>
     <base href="%BASE_URL%" />
   </head>
 
@@ -18,9 +18,10 @@
       <a
         href="index.html"
         class="grid place-content-center text-xs size-7 rounded-full hover:bg-primary text-achromatic-700 hover:text-white duration-200"
-        aria-label="홈페이지"
+        aria-label="컴포넌트 디자인 핸드오프"
+        title="컴포넌트 디자인 핸드오프 페이지로 이동"
       >←</a>
-      <h1 class="text-lg font-normal text-primary">페이지 디자인 → 코드 핸드오프</h1>
+      <h1 class="text-lg font-normal text-primary">페이지 디자인 핸드오프</h1>
     </header>
 
     <main class="flex my-5">
