[수정] 홈 → 찜한 콘텐츠

--- a/pages/tailwindcss.html
+++ b/pages/tailwindcss.html
@@ -183,7 +183,7 @@
             <li class="flex-1 flex-shrink-0 text-xs text-achromatic-700">
               <a
                 href=""
-                class="flex flex-col items-center gap-1 leading-none flex-shrink-0"
+                class="flex flex-col items-center gap-1 leading-none flex-shrink-0 text-center"
               >
                 <svg
                   aria-hidden="true"
@@ -204,7 +204,7 @@
             <li class="flex-1 flex-shrink-0 text-xs text-achromatic-700">
               <a
                 href=""
-                class="flex flex-col items-center gap-1 leading-none flex-shrink-0"
+                class="flex flex-col items-center gap-1 leading-none flex-shrink-0 text-center"
               >
                 <svg
                   width="24"
@@ -226,7 +226,7 @@
             <li class="flex-1 flex-shrink-0 text-xs text-achromatic-700">
               <a
                 href=""
-                class="flex flex-col items-center gap-1 leading-none flex-shrink-0"
+                class="flex flex-col items-center gap-1 leading-none flex-shrink-0 text-center"
               >
                 <svg
                   width="24"
@@ -242,13 +242,13 @@
                     fill-opacity="0.5"
                   />
                 </svg>
-                홈
+                찜한 콘텐츠
               </a>
             </li>
             <li class="flex-1 flex-shrink-0 text-xs text-achromatic-700">
               <a
                 href=""
-                class="flex flex-col items-center gap-1 leading-none flex-shrink-0"
+                class="flex flex-col items-center gap-1 leading-none flex-shrink-0 text-center"
                 lang="en"
               >
                 <img
